# heddle

./: .gitignore  .rumdl.toml  CLAUDE.md  Dockerfile.orchestrator  Dockerfile.router  Dockerfile.worker  FEEDBACK.md  GOVERNANCE.md  LICENSE  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml
.github/workflows/: build-diagrams.yml  ci.yml  docs.yml  publish.yml
configs/: router_rules.yaml
configs/councils/: blind_taste_test.yaml  debate_arena.yaml  example.yaml  town_hall_debate.yaml
configs/mcp/: docman.yaml
configs/orchestrators/: default.yaml  rag_pipeline.yaml
configs/schedulers/: example.yaml
configs/workers/: _subprocess_template.yaml  _template.yaml  classifier.yaml  extractor.yaml  qa.yaml  rag_chunker.yaml  rag_ingestor.yaml  rag_mux.yaml  rag_trend_analyzer.yaml  rag_vectorstore.yaml  rag_vectorstore_lance.yaml  reviewer.yaml  summarizer.yaml  translator.yaml
deploy/macos/: install.sh  uninstall.sh
deploy/windows/: install.ps1  uninstall.ps1
docker/: Dockerfile.orchestrator  Dockerfile.router  Dockerfile.worker  Dockerfile.workshop  entrypoint.sh
docs/: APP_DEPLOYMENT.md  ARCHITECTURE.md  BLIND_AUDIT.md  CLI_REFERENCE.md  CODING_GUIDE.md  CONCEPTS.md  CONFIG.md  CONTRIBUTING.md  DESIGN_INVARIANTS.md  GETTING_STARTED.md  KUBERNETES.md  LOCAL_DEPLOYMENT.md  Makefile  TROUBLESHOOTING.md  WHY_HEDDLE.md  WHY_LOOM.md  WORKSHOP_TOUR.md  batch-processing.md  building-workflows.md  conf.py  council-howto.md  generate_diagrams.py  index.md  index.rst  rag-howto.md  workers-reference.md  workshop.md
docs/api/: bus.md  bus.rst  contrib.md  contrib.rst  core.md  core.rst  mcp.md  mcp.rst  orchestrator.md  orchestrator.rst  router.md  router.rst  scheduler.md  scheduler.rst  tracing.md  tracing.rst  worker.md  worker.rst
docs/diagrams/: README.md  _pipeline-test.drawio  architecture-overview.drawio  data-flow.drawio  nats-topology.drawio
docs/tutorials/: document-intake.md  research-review.md
docs/vision/: AD_HOC_CLUSTERS.md
examples/: rag_demo.py
examples/blind-taste-test/: README.md  prompts.txt  run.py
examples/debate-arena/: README.md  run.py  topics.txt
examples/document-intake/: README.md
examples/document-intake/processing/: __init__.py  csv_reader.py
examples/document-intake/sample-data/: public_comments.csv  public_comments.json
examples/research-review/: README.md
examples/research-review/sample-data/: abstracts.json
examples/town-hall/: README.md  run.py
k8s/: kustomization.yaml  namespace.yaml  nats-deployment.yaml  orchestrator-deployment.yaml  redis-deployment.yaml  router-deployment.yaml  worker-deployment.yaml  workshop-deployment.yaml
src/heddle/: __init__.py
src/heddle/bus/: base.py  memory.py  nats_adapter.py
src/heddle/cli/: config.py  council.py  main.py  new.py  preflight.py  rag.py  setup.py  validate.py
src/heddle/contrib/: __init__.py
src/heddle/core/: actor.py  config.py  manifest.py  messages.py  workspace.py
src/heddle/discovery/: __init__.py  mdns.py
src/heddle/mcp/: __init__.py  bridge.py  config.py  council_bridge.py  council_discovery.py  discovery.py  resources.py  server.py  session_bridge.py  session_registry.py  workshop_bridge.py  workshop_discovery.py
src/heddle/orchestrator/: checkpoint.py  decomposer.py  pipeline.py  runner.py  store.py  stream.py  synthesizer.py
src/heddle/router/: dead_letter.py  router.py
src/heddle/scheduler/: config.py  scheduler.py
src/heddle/tracing/: __init__.py  otel.py
src/heddle/tui/: __init__.py  app.py
src/heddle/worker/: __init__.py  backends.py  base.py  embeddings.py  processor.py  runner.py
src/heddle/workshop/: app.py  app_manager.py  config_impact.py  config_manager.py  db.py  eval_runner.py  pipeline_editor.py  rag_manager.py  test_runner.py
src/loom/: __init__.py
src/loom/bus/: base.py  memory.py  nats_adapter.py
src/loom/cli/: council.py  main.py
src/loom/core/: actor.py  config.py  contracts.py  manifest.py  messages.py  workspace.py
src/loom/mcp/: __init__.py  bridge.py  config.py  council_bridge.py  council_discovery.py  discovery.py  resources.py  server.py  session_bridge.py  session_registry.py  workshop_bridge.py  workshop_discovery.py
src/loom/orchestrator/: checkpoint.py  decomposer.py  pipeline.py  runner.py  store.py  stream.py  synthesizer.py
src/loom/router/: dead_letter.py  router.py
src/loom/scheduler/: config.py  scheduler.py
src/loom/tracing/: otel.py
src/loom/tui/: app.py
src/loom/worker/: __init__.py  backends.py  base.py  embeddings.py  knowledge.py  processor.py  runner.py  tools.py
src/loom/workshop/: app.py  app_manager.py  config_impact.py  config_manager.py  db.py  eval_runner.py  pipeline_editor.py  test_runner.py
tests/: conftest.py  test_actor.py  test_app_manager.py  test_app_manifest.py  test_backends.py  test_bus_memory.py  test_checkpoint.py  test_cli.py  test_cli_config.py  test_cli_council.py  test_cli_new.py  test_cli_rag.py  test_cli_setup.py  test_cli_validate.py  test_config_impact.py  test_config_shipped.py  test_config_validation.py  test_config_validation_extended.py  test_contracts.py  test_contrib_duckdb_query.py  test_contrib_duckdb_vector.py  test_contrib_duckdb_view.py  test_dead_letter.py  test_decomposer.py  test_deepeval_worker.py  test_e2e_advanced.py  test_e2e_operations.py  test_embeddings.py  test_extract_json.py  test_extract_json_extended.py  test_integration.py  test_knowledge_silos.py  test_mcp_bridge.py  test_mcp_config.py  test_mcp_council_bridge.py  test_mcp_council_discovery.py  test_mcp_discovery.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_session_bridge.py  (+35 more)
tests/contrib/chatbridge/: test_anthropic.py  test_base.py  test_discover.py  test_lmstudio.py  test_manual.py  test_ollama.py  test_openai.py  test_worker.py
tests/contrib/council/: test_config.py  test_convergence.py  test_interjections.py  test_orchestrator.py  test_protocol.py  test_runner.py  test_schemas.py  test_scorer.py  test_tournament.py  test_transcript.py
tests/contrib/docproc/: test_docproc.py
tests/contrib/lancedb/: test_lancedb_store.py
(+154 files in other folders)
