[project]
name = "loom"
version = "0.3.0"
description = "Lightweight Orchestrated Operational Mesh — Actor-based multi-LLM agent framework"
requires-python = ">=3.11"
dependencies = [
    "nats-py>=2.7.0",          # NATS client (async)
    "pydantic>=2.5.0",         # Message schemas and validation
    "pyyaml>=6.0",             # Config files
    "httpx>=0.27.0",           # HTTP client for LLM API calls
    "tiktoken>=0.7.0",         # Token counting for context management
    "click>=8.1.0",            # CLI
    "structlog>=24.1.0",       # Structured logging
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",            # Redis-backed checkpoint store (async)
]
local = [
    "ollama>=0.3.0",           # Local model client
]
docproc = [
    "docling>=2.0.0",          # Document extraction (PDF, DOCX, etc.)
]
duckdb = [
    "duckdb>=1.0.0",           # Embedded analytics database
]
rag = [
    "duckdb>=1.0.0",           # Vector store backend
    "requests>=2.31.0",        # Ollama HTTP calls from LLM analyzers
]
scheduler = [
    "croniter>=2.0.0",         # Cron expression parsing for scheduled dispatch
]
mcp = [
    "mcp>=1.20.0",             # Model Context Protocol SDK
]
workshop = [
    "fastapi>=0.110.0",        # Web framework for Workshop UI
    "uvicorn>=0.27.0",         # ASGI server
    "jinja2>=3.1.0",           # Template engine
    "python-multipart>=0.0.9", # Form handling
    "duckdb>=1.0.0",           # Eval/version storage
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "duckdb>=1.0.0",
    "redis>=5.0.0",            # Needed for contrib/redis tests
    "croniter>=2.0.0",         # Needed for scheduler tests
    "mcp>=1.20.0",             # Needed for MCP gateway tests
]

[project.scripts]
loom = "loom.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Register custom markers so pytest does not emit "PytestUnknownMarkWarning".
# Usage:  pytest tests/ -m "not integration"   (skip integration tests)
#         pytest tests/ -m integration          (run only integration tests)
markers = [
    "integration: requires running infrastructure (NATS, workers, Ollama)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["loom"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]
